<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PressureActivity">

    <Button
        android:id="@+id/btnSavePressure"
        android:layout_width="157dp"
        android:layout_height="97dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="127dp"
        android:backgroundTint="#258E19"
        android:text="@string/save"
        android:textColor="#100808"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDate" />

    <TextView
        android:id="@+id/pressureTitle"
        android:layout_width="383dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="30dp"
        android:background="#9FECA2"
        android:fontFamily="sans-serif-black"
        android:foregroundTint="#9E2A2A"
        android:gravity="center"
        android:text="@string/pressure"
        android:textColor="#0C0A0A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/upPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/upPres"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressureTitle" />

    <EditText
        android:id="@+id/downPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/downPres"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upPressure" />

    <EditText
        android:id="@+id/inputPulse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/pulse"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downPressure" />

    <EditText
        android:id="@+id/inputDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/localDate"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkTachycardia" />

    <CheckBox
        android:id="@+id/checkTachycardia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="151dp"
        android:text="@string/tahikardya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPulse" />

</androidx.constraintlayout.widget.ConstraintLayout>