<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="383dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="30dp"
        android:background="#9FECA2"
        android:fontFamily="sans-serif-black"
        android:foregroundTint="#9E2A2A"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="#0C0A0A"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="89dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="156dp"
        android:contentDescription="@string/localDate"
        android:tint="#59A82F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/accessible_forward_24px" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="97dp"
        android:ems="10"
        android:hint="@string/name_sur"
        android:inputType="textPersonName"
        android:textColor="#0C0606"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <EditText
        android:id="@+id/inputAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="62dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName" />

    <Button
        android:id="@+id/btnLifeStatus"
        android:layout_width="157dp"
        android:layout_height="97dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="14dp"
        android:backgroundTint="#258E19"
        android:text="@string/life_status"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btnPressure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSave" />

    <Button
        android:id="@+id/btnPressure"
        android:layout_width="157dp"
        android:layout_height="97dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#258E19"
        android:text="@string/pressure"
        android:textColor="#050303"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnLifeStatus"
        app:layout_constraintTop_toBottomOf="@+id/btnSave" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="157dp"
        android:layout_height="97dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="127dp"
        android:backgroundTint="#258E19"
        android:text="@string/save"
        android:textColor="#100808"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAge" />
</androidx.constraintlayout.widget.ConstraintLayout>