<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LifeActivity">

    <Button
        android:id="@+id/btnSaveLife"
        android:layout_width="157dp"
        android:layout_height="97dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="127dp"
        android:backgroundTint="#258E19"
        android:text="@string/save"
        android:textColor="#100808"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSteps" />

    <EditText
        android:id="@+id/inputSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="97dp"
        android:ems="10"
        android:hint="@string/steps"
        android:inputType="textPersonName"
        android:textColor="#0C0606"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputWeight" />

    <EditText
        android:id="@+id/inputWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="97dp"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="textPersonName"
        android:textColor="#0C0606"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressureTitle2" />

    <TextView
        android:id="@+id/pressureTitle2"
        android:layout_width="383dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="30dp"
        android:background="#9FECA2"
        android:fontFamily="sans-serif-black"
        android:foregroundTint="#9E2A2A"
        android:gravity="center"
        android:text="@string/life_status"
        android:textColor="#0C0A0A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>